--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.1",
+    "@astrojs/preact": "^3.1.1",
     "@astrojs/tailwind": "^5.0.2",
     "astro": "^3.4.2",
+    "preact": "^10.19.6",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   }
