--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.3.1",
+    "@astrojs/check": "^0.5.9",
     "@astrojs/preact": "^3.1.1",
-    "@astrojs/tailwind": "^5.0.2",
-    "astro": "^3.4.2",
-    "preact": "^10.19.6",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2"
+    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/netlify": "^5.2.0",
+    "astro": "^4.5.8",
+    "preact": "^10.20.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.3"
   }
 }
